# icfpc2018

./: .gitignore  CMakeLists.txt  README.md  gg.py  submission_check.py  tracer6  update-submission.py  upload.sh  validate.sh
.jenkins/: README.md  commit_submission.sh  fail.sh  pull.sh  script.sh
AI/core/: SampleAI.cpp
AI/hasi10/: hasi10.cpp
AI/hasi11/: hasi11.cpp
AI/hasi12/: hasi12.cpp
AI/hasi13/: hasi13.cpp
AI/hasi14/: asm.hpp  hasi14.cpp
AI/hasi15/: asm.hpp  dis.hpp
AI/hasi17/: dis.hpp
AI/hasi18/: asm.hpp  dis.hpp
AI/hasi19/: common.hpp  dis.hpp
AI/hasi2/: hasi2.cpp
AI/hasi20/: dis.hpp
AI/hasi21/: asm.hpp  common.hpp
AI/hasi22/: asm.hpp
AI/hasi23/: asm.hpp
AI/hasi3/: hasi3.cpp
AI/hasi5/: hasi5.cpp
AI/hasi6/: hasi6.cpp
AI/hasi666/: .#output  asm.hpp
AI/hasi7/: hasi7.cpp
AI/hasi8/: hasi8.cpp
AI/hasi9/: hasi9.cpp
AI/johniel1/: Makefile  johniel1.cpp
AI/johniel11/: johniel11.cpp
AI/johniel2/: LA019.nbt  Makefile  johniel2.cpp
AI/johniel3/: FA019.nbt  Makefile  johniel3.cpp
AI/johniel4/: FA001.nbt  FA019.nbt  Makefile  johniel4.cpp
AI/johniel5/: FA001.nbt  Makefile  johniel5.cpp
AI/johniel6/: Makefile  johniel6.cpp
AI/johniel7/: Makefile  johniel7.cpp
AI/johniel8/: Makefile  johniel8.cpp
AI/johniel9/: Makefile  johniel9.cpp
AI/shioshiota1/: shioshiota1.cpp
AI/shioshiota12/: shioshiota12.cpp
AI/shioshiota13/: shioshiota13.cpp
AI/shioshiota14/: shioshiota14.cpp
AI/shioshiota16/: asm.hpp  common.hpp  dis.hpp
AI/shioshiota17/: asm.hpp  common.hpp  dis.hpp
AI/shioshiota18/: asm.hpp  common.hpp  dis.hpp  shioshiota18.cpp
AI/shioshiota19/: asm.hpp  shioshiota19.cpp
AI/shioshiota2/: shioshiota2.cpp
AI/shioshiota3/: shioshiota3.cpp
AI/shioshiota4/: shioshiota4.cpp
AI/shioshiota8/: shioshiota8.cpp
ExecuteTrace/: ExecuteTrace.go  official.html
ExecuteTrace/official_files/: css
include/: TraceDumper.hpp  lmove.hpp  macro.hpp  model.hpp  mutable_model.hpp  output.hpp  point.hpp  union_find.hpp
johniel/: Makefile  a.out  main.cpp  output  plot
misc/: submit_log_lightning.txt
modeler/: main.cpp
portal/: env.sh  portal.py  requirements.txt
portal/static/js/: dashboard.js
portal/templates/: base.html  index.html  logs.html  output.html
rank/: FA001.tsv  FA002.tsv  FA003.tsv  FA004.tsv  FA005.tsv  FA006.tsv  FA007.tsv  FA008.tsv  FA009.tsv  FA010.tsv  FA011.tsv  FA012.tsv  FA013.tsv  FA014.tsv  FA015.tsv  FA016.tsv  FA017.tsv  FA018.tsv  FA019.tsv  FA020.tsv  FA021.tsv  FA022.tsv  FA023.tsv  FA024.tsv  FA025.tsv  FA026.tsv  FA027.tsv  FA028.tsv  FA029.tsv  FA030.tsv  FA031.tsv  FA032.tsv  FA033.tsv  FA034.tsv  FA035.tsv  FA036.tsv  FA037.tsv  FA038.tsv  FA039.tsv  FA040.tsv  (+446 more)
shohei/ai/: ai.hxml  ai.hxproj  main.hl  start.bat
shohei/ai/src/: Ai.hx  Main.hx  (+3 more)
shohei/common/: BackwardCommand.hx  Bot.hx  BotId.hx  Command.hx  CommandKind.hx  Direction.hx  Far.hx  GZip.hx  Game.hx  Near.hx  Position.hx  Tracer.hx  UnionFind.hx
shohei/validator/: .gitignore  big.result  big2.result  fa.result  fd.result  fd_fail.result  fr.result  fr_fail.result  start.bat  temp.result  validator.hxml  validator.hxproj
shohei/visualizer/: start.bat  start_server.bat  visualizer.hxml  visualizer.hxproj
simulator/: LA002.trace  README.md  check.sh  fusion.go  fusion_test.go  group.go  group_test.go  main.go  math.go  model.go  point.go  region.go  small-trace  state.go  state_test.go
simulator/files/: LA001.trace  hasi1_LA019_tgt.ascii  johniel1_LA031_tgt.ascii  johniel1_LA031_tgt.nbt  shioshiota4_LA134_tgt.ascii  small-model  small-trace
submission/: .gitignore  list.tsv  res.txt
submission/nbt/: FA001.nbt  FA002.nbt  FA003.nbt  FA004.nbt  FA005.nbt  FA006.nbt  FA007.nbt  FA008.nbt  FA009.nbt  FA010.nbt  FA011.nbt  FA012.nbt  FA013.nbt  FA014.nbt  FA015.nbt  FA016.nbt  FA017.nbt  FA018.nbt  FA020.nbt  FA021.nbt  FA022.nbt  FA023.nbt  FA024.nbt  FA025.nbt  FA026.nbt  FA027.nbt  FA028.nbt  FA029.nbt  FA030.nbt  FA031.nbt  FA032.nbt  FA033.nbt  FA034.nbt  FA035.nbt  FA036.nbt  FA037.nbt  FA038.nbt  FA039.nbt  FA040.nbt  FA041.nbt  (+605 more)
tracer/: tracer.cpp  tracer2.cpp  tracer3.cpp  tracer4.cpp  tracer5.cpp  tracer6.cpp
(+32 files in other folders)
